# Telegram-Guard

./: .gitignore  .replit  bot.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  requirements_railway.txt  run_bot.sh  session_7820995179_380970625695.session  session_7820995179_4917666656685.session
attached_assets/: Pasted-from-telethon-sync-import-TelegramClient-from-telethon-_1768512292246.txt
scripts/: build.sh  inngest.sh
src/mastra/: index.ts
src/mastra/agents/: userCheckAgent.ts
src/mastra/tools/: telegramTools.ts  userTools.ts
src/mastra/workflows/: userCheckWorkflow.ts
src/triggers/: telegramTriggers.ts
